crates/xifty-cli/tests/snapshots/cli_contract__extract_dji_mavic3_normalized.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
assertion_line: 311
expression: "extract_json(\"dji_mavic3.mp4\", ViewMode::Normalized)"
---
{
  "input": {
    "container": "isobmff",
    "detected_format": "mp4",
    "path": "dji_mavic3.mp4"
  },
  "normalized": {
    "fields": [
      {
        "confidence": 0.949999988079071,
        "field": "captured_at",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime",
            "notes": [
              "derived from movie header creation time"
            ]
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "created_at",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime",
            "notes": [
              "derived from movie header creation time"
            ]
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "modified_at",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime",
            "notes": [
              "derived from movie header modification time"
            ]
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T13:00:00"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.model",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 636,
            "offset_start": 604,
            "path": "udta/©mdl"
          }
        ],
        "value": {
          "kind": "string",
          "value": "FC3682"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.width",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime",
            "notes": [
              "derived from visual track header"
            ],
            "offset_end": 0,
            "offset_start": 0,
            "path": "moov/trak@68/tkhd"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1920
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.height",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime",
            "notes": [
              "derived from visual track header"
            ],
            "offset_end": 0,
            "offset_start": 0,
            "path": "moov/trak@68/tkhd"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1080
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "duration",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime",
            "notes": [
              "derived from mvhd or media track timing"
            ]
          }
        ],
        "value": {
          "kind": "float",
          "value": 6.5
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "video.framerate",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime",
            "notes": [
              "derived from video track timing"
            ]
          }
        ],
        "value": {
          "kind": "float",
          "value": 29.97002997002997
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "video.bitrate",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime",
            "notes": [
              "derived from video sample description bitrate box"
            ]
          }
        ],
        "value": {
          "kind": "integer",
          "value": 34969786
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "codec.video",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime",
            "notes": [
              "derived from video track sample description"
            ]
          }
        ],
        "value": {
          "kind": "string",
          "value": "avc1"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.serial_number",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 684,
            "offset_start": 636,
            "path": "udta/©csn"
          }
        ],
        "value": {
          "kind": "string",
          "value": "53HQN4T0M5B7JW"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "drone.flight.pitch_deg",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 511,
            "offset_start": 493,
            "path": "udta/©fpt"
          }
        ],
        "value": {
          "kind": "float",
          "value": 0.9
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "drone.flight.yaw_deg",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 531,
            "offset_start": 511,
            "path": "udta/©fyw"
          }
        ],
        "value": {
          "kind": "float",
          "value": 175.5
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "drone.flight.roll_deg",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 549,
            "offset_start": 531,
            "path": "udta/©frl"
          }
        ],
        "value": {
          "kind": "float",
          "value": -3.9
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "drone.gimbal.pitch_deg",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 568,
            "offset_start": 549,
            "path": "udta/©gpt"
          }
        ],
        "value": {
          "kind": "float",
          "value": -31.2
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "drone.gimbal.yaw_deg",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 586,
            "offset_start": 568,
            "path": "udta/©gyw"
          }
        ],
        "value": {
          "kind": "float",
          "value": -2.3
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "drone.gimbal.roll_deg",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 604,
            "offset_start": 586,
            "path": "udta/©grl"
          }
        ],
        "value": {
          "kind": "float",
          "value": 0.0
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "drone.speed.x_mps",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 457,
            "offset_start": 439,
            "path": "udta/©xsp"
          }
        ],
        "value": {
          "kind": "float",
          "value": 0.0
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "drone.speed.y_mps",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 475,
            "offset_start": 457,
            "path": "udta/©ysp"
          }
        ],
        "value": {
          "kind": "float",
          "value": 0.0
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "drone.speed.z_mps",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 493,
            "offset_start": 475,
            "path": "udta/©zsp"
          }
        ],
        "value": {
          "kind": "float",
          "value": 0.0
        }
      },
      {
        "confidence": 0.8999999761581421,
        "field": "location",
        "sources": [
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 439,
            "offset_start": 410,
            "path": "udta/©xyz"
          },
          {
            "container": "mp4",
            "namespace": "quicktime-udta",
            "offset_end": 439,
            "offset_start": 410,
            "path": "udta/©xyz"
          }
        ],
        "value": {
          "kind": "coordinates",
          "value": {
            "latitude": 40.7922,
            "longitude": -73.9584
          }
        }
      }
    ]
  },
  "report": {
    "conflicts": [],
    "issues": []
  },
  "schema_version": "0.1.0"
}
